W10/lab1/gatekeeper/constraints/deny-hostnetwork.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoHostNetwork
metadata:
  name: deny-hostnetwork
spec:
  enforcementAction: deny
