W10/lab1/gatekeeper/constraints/deny-root-user.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoRootUser
metadata:
  name: deny-root-user
spec:
  enforcementAction: deny
