W10/lab1/gatekeeper/constraints/no-latest-image.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoImageWithLatest
metadata:
  name: deny-latest-image
spec:
  enforcementAction: deny
