W10/lab1/gatekeeper/constraints/require-owner-label.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-owner-label
spec:
  enforcementAction: deny
  parameters:
    labels:
      - owner
